web-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app-pod
spec:
  containers:
    - name: web-app-container
      image: web_app_kub
      ports:
        - containerPort: 80
